src/objects/Event_Roles__c.object
<CustomObject>
    <description>Who attended the event, what the purpose of the attendance was. Looks up to Contact and is an Event detail.</description>
    <fields>
        <fullName>Attendee__c</fullName>
        <description>Person who attended the event.</description>
        <label>Attendee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Attended Events</relationshipLabel>
        <relationshipName>Attended_Events</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <description>Event where attendee participated.</description>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Event Roles</relationshipLabel>
        <relationshipName>Event_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Rare_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if attendee is a Rare staff member.</description>
        <label>Rare Staff?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Reason why attendee participated in the event.</description>
        <label>Role or Purpose</label>
        <picklist>
            <picklistValues>
                <fullName>Attendee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organizer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Event Role</label>
    <nameField>
        <displayFormat>ROLE-{0000}</displayFormat>
        <label>Event Roles Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>